--- a/curso-4-webApp-em-flask/templates/Lista.html
+++ b/curso-4-webApp-em-flask/templates/Lista.html
@@ -14,6 +14,8 @@
          <thead class="thead-default">
             <tr>
                <th>nome</th>
+               <th>categoria</th>
+               <th>console</th>
             </tr>
         </thead>
         <tbody>
@@ -21,7 +23,9 @@
 
 
             <tr>
-                <td>{{ jogo }}</td>
+                <td>{{ jogo.nome }}</td>
+                <td>{{ jogo.categoria }}</td>
+                <td>{{ jogo.console }}</td>
 
             </tr>
             {% endfor %}
